[package]
name = "plmap"
version = "0.2.3"
edition = "2018"
readme = "README.md"
license = "MIT"
authors = ["Andrew Chambers <ac@acha.ninja>"]
description = "Parallel pipelined map over iterators."
repository = "https://github.com/andrewchambers/plmap-rust"

[dependencies]
crossbeam-channel = ">0.3"
crossbeam-utils = ">0.3"
